basic player structuring

--- a/public/index.html
+++ b/public/index.html
@@ -128,7 +128,33 @@
   <footer>
     <progress id="player-progress"></progress>
     <div id="player-controls">
+      <div id="track-info-cont">
+          <img src="./images/player album art.jfif" alt="" class="track-art">
 
+          <div id="track-info-info">
+            <p id="player-track-name">Deep Pockets</p>
+            <p id="player-track-artists">Drake</p>
+          </div>
+
+          <div id="player-controls-controls">
+            repeat
+            prev
+            play
+            next
+            shuffle
+          </div>
+
+          <div id="player-volume-controls-container">
+            volume images
+            <progress id="player-volume-control"></progress>
+          </div>
+
+          <div id="player-additional-controls-cont">
+            favorite
+            add to Playlists
+            download
+          </div>
+      </div>
     </div>
   </footer>
 
