added player images [unstyled]

--- a/public/index.html
+++ b/public/index.html
@@ -137,21 +137,22 @@
           </div>
 
           <div id="player-controls-controls">
-            repeat
-            prev
-            play
-            next
-            shuffle
+            <img src="./images/repeat-vector.png" alt="repeat" class="player-control-img">
+            <img src="./images/prev-vector.png" alt="previous" class="player-control-img">
+            <img src="./images/play-vector.png" alt="play" class="player-control-img">
+            <img src="./images/next-vector.png" alt="next" class="player-control-img">
+            <img src="./images/shuffle-vector.png" alt="shuffle" class="player-control-img">
           </div>
-
+          
           <div id="player-volume-controls-container">
-            volume images
+            <img src="./images/volume-vector.png" alt="volume control" class="player-control-img">
             <progress id="player-volume-control"></progress>
           </div>
-
+          
           <div id="player-additional-controls-cont">
-            favorite
-            add to Playlists
+            <img src="./images/favorite-vector.png" alt="Add to Favorites" class="player-control-img">
+            <img src="./images/add-to-playlist-vector.png" alt="Add to Playlist" class="player-control-img">
+            <img src="./images/download-vector.png" alt="Download Track" class="player-control-img">
             download
           </div>
       </div>
