--- a/public/index.html
+++ b/public/index.html
@@ -53,36 +53,35 @@
     main tish
   </main>
 
-  <footer>
-    <progress id="player-progress"></progress>
+  <footer id="player">
+    <progress id="player-progress" value=".3"></progress>
     <div id="player-controls">
       <div id="track-info-cont">
-          <img src="./images/player album art.jfif" alt="" class="track-art">
+        <img src="./images/player album art.jfif" alt="" class="track-art">
 
-          <div id="track-info-info">
-            <p id="player-track-name">Deep Pockets</p>
-            <p id="player-track-artists">Drake</p>
-          </div>
+        <div id="track-info-info">
+          <p id="player-track-name">Deep Pockets</p>
+          <p id="player-track-artists">Drake</p>
+        </div>
+      </div>
 
-          <div id="player-controls-controls">
-            <img src="./images/repeat-vector.png" alt="repeat" class="player-control-img">
-            <img src="./images/prev-vector.png" alt="previous" class="player-control-img">
-            <img src="./images/play-vector.png" alt="play" class="player-control-img">
-            <img src="./images/next-vector.png" alt="next" class="player-control-img">
-            <img src="./images/shuffle-vector.png" alt="shuffle" class="player-control-img">
-          </div>
-          
-          <div id="player-volume-controls-container">
-            <img src="./images/volume-vector.png" alt="volume control" class="player-control-img">
-            <progress id="player-volume-control"></progress>
-          </div>
-          
-          <div id="player-additional-controls-cont">
-            <img src="./images/favorite-vector.png" alt="Add to Favorites" class="player-control-img">
-            <img src="./images/add-to-playlist-vector.png" alt="Add to Playlist" class="player-control-img">
-            <img src="./images/download-vector.png" alt="Download Track" class="player-control-img">
-            download
-          </div>
+      <div id="player-controls-controls">
+        <img src="./images/repeat-vector.png" alt="repeat" class="player-control-img">
+        <img src="./images/prev-vector.png" alt="previous" class="player-control-img">
+        <img src="./images/play-vector.png" alt="play" class="player-control-img">
+        <img src="./images/next-vector.png" alt="next" class="player-control-img">
+        <img src="./images/shuffle-vector.png" alt="shuffle" class="player-control-img">
+      </div>
+
+      <div id="player-volume-controls-container">
+        <img src="./images/volume-vector.png" alt="volume control" class="player-control-img">
+        <progress id="player-volume-control" value=".9"></progress>
+      </div>
+
+      <div id="player-additional-controls-cont">
+        <img src="./images/favorite-vector.png" alt="Add to Favorites" class="player-control-img">
+        <img src="./images/add-to-playlist-vector.png" alt="Add to Playlist" class="player-control-img">
+        <img src="./images/download-vector.png" alt="Download Track" class="player-control-img">
       </div>
     </div>
   </footer>
