Added Raleway and Playfair fonts

--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,18 @@
   <script defer src="/__/firebase/init.js"></script>
 
   <link rel="stylesheet" href="style.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&family=Raleway:wght@300;500&display=swap"
+    rel="stylesheet"> 
 </head>
 
 <body>
 
   <aside>
-    <h1>IndiJams</h1>
-    <small>The Best Tunes in the South</small>
+    <div id="site-brand">
+      <h1 id="site-title">IndiJams</h1>
+      <small id="site-subtitle">The Best Tunes in the South</small>
+    </div>
 
     <br><br>
     Music <br>
