--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
 <body>
 
-  <aside>
+  <aside id="sidebar">
     <div id="site-brand">
       <h1 id="site-title">IndiJams</h1>
       <small id="site-subtitle">The Best Tunes in the South</small>
