styled main header

--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,15 @@
     Your Playlists
   </aside>
 
-  <header>
-    search
-    Login
-  </header>
-
+  
   <main>
+    <header id="main-header">
+     <div id="search-cont">
+       <img src="./images/search-vector.png" alt="search" id="search-vector">
+       <input type="text" name="search" id="search-input" placeholder="Search For a Song, Album, Artist etc">
+     </div>
+      <button id="login-btn">Login</button>
+    </header>
     main tish
   </main>
 
