more header styling

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,8 @@
     <header id="main-header">
      <div id="search-cont">
        <img src="./images/search-vector.png" alt="search" id="search-vector">
-       <input type="text" name="search" id="search-input" placeholder="Search For a Song, Album, Artist etc">
+       <input type="text" name="search" id="search-input" placeholder="Search For a Song, Album, Artist etc"
+         autocomplete="off">
      </div>
       <button id="login-btn">Login</button>
     </header>
