--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,24 @@
       <h1 id="site-title">IndiJams</h1>
       <small id="site-subtitle">The Best Tunes in the South</small>
     </div>
-
-    <br><br>
-    Music <br>
-    Home<br>
-    Songs<br>
-    Albums<br>
-    Artists<br>
-    Liked<br><br>
-
-    Playlists<br>
-    Featured<br>
-    Hot Now<br>
-    New<br>
-    Rising<br>
-    Your Playlists
+    <nav id="sidebar-nav">
+      <ul class="nav-group">
+        <li class="nav-group-header">Music</li>
+        <li class="nav-group-item">Home</li>
+        <li class="nav-group-item">Songs</li>
+        <li class="nav-group-item">Albums</li>
+        <li class="nav-group-item">Artists</li>
+        <li class="nav-group-item">Stories</li>
+      </ul>
+      <ul class="nav-group">
+        <li class="nav-group-header">Playlists</li>
+        <li class="nav-group-item">Featured</li>
+        <li class="nav-group-item">Hot Now</li>
+        <li class="nav-group-item">New</li>
+        <li class="nav-group-item">Rising</li>
+        <li class="nav-group-item">Your Playlists</li>
+      </ul>
+    </nav>
   </aside>
 
   
