added images to nav

--- a/public/index.html
+++ b/public/index.html
@@ -35,21 +35,49 @@
     <nav id="sidebar-nav">
       <ul class="nav-group">
         <li class="nav-group-header">Music</li>
-        <li class="nav-group-item">Home</li>
-        <li class="nav-group-item">Songs</li>
-        <li class="nav-group-item">Albums</li>
-        <li class="nav-group-item">Artists</li>
-        <li class="nav-group-item">Stories</li>
+        <li class="nav-group-item" id="nav-home-link">
+          <img src="./images//home-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Home</span>
+        </li>
+        <li class="nav-group-item" id="nav-songs-link">
+          <img src="./images//music-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Songs</span>
+        </li>
+        <li class="nav-group-item" id="nav-albums-link">
+          <img src="./images//album-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Albums</span>
+        </li>
+        <li class="nav-group-item" id="nav-artist-link">
+          <img src="./images//artist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Artists</span>
+        </li>
       </ul>
       <ul class="nav-group">
         <li class="nav-group-header">Playlists</li>
-        <li class="nav-group-item">Featured</li>
-        <li class="nav-group-item">Hot Now</li>
-        <li class="nav-group-item">New</li>
-        <li class="nav-group-item">Rising</li>
-        <li class="nav-group-item">Your Playlists</li>
+        <li class="nav-group-item" id="nav-featured-link">
+          <img src="./images//playlist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Featured</span>
+        </li>
+        <li class="nav-group-item" id="nav-hot-link">
+          <img src="./images//playlist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Hot Now</span>
+        </li>
+        <li class="nav-group-item" id="nav-new-link">
+          <img src="./images//playlist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">New</span>
+        </li>
+        <li class="nav-group-item" id="nav-rising-link">
+          <img src="./images//playlist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Rising</span>
+        </li>
+        <li class="nav-group-item" id="nav-your-playlists-link">
+          <img src="./images//playlist-vector.png" class="nav-item-img">
+          <span class="nav-item-text">Your Playlists</span>
+        </li>
       </ul>
     </nav>
+
+    <p id="nav-copyright">© IndiJams 2020</p>
   </aside>
 
   
