styled featured album section

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,30 @@
      </div>
       <button id="login-btn">Login</button>
     </header>
-    main tish
+    
+    <div id="main-body-cont">
+      <section id="main-main-section">
+        <div id="featured-div">
+          <h2 id="featured-div-header">Featured Albums</h2>
+          <div id="featured-div-body">
+            <img src="./images/album covers/Shoot for the Stars Aim for the Moon_Pop Smoke.jpg" alt=""
+              id="featured-album-cover-art">
+            <div id="featured-album-text-cont">
+              <h3 id="featured-album-name">Shoot For The Stars, Aim For The Moon</h3>
+              <p id="featured-album-artist">Pop Smoke</p>
+              <p id="featured-album-description">Shoot for the Stars, Aim for the Moon is the debut studio album by
+                American rapper Pop Smoke, and first posthumous project following his murder from a home invasion on
+                February 19, 2020.</p>
+            </div>
+          </div>
+        </div>
+        Recently Added
+      </section>
+      <section id="main-side-section">
+        Trending Now
+        Your Fav Albums
+      </section>
+    </div>
   </main>
 
   <footer id="player">
