styled trending now div

--- a/public/index.html
+++ b/public/index.html
@@ -132,7 +132,53 @@
                 </div>
             </section>
             <section id="main-side-section">
-                Trending Now
+                <div id="trending-now-div">
+                    <h2 id="trending-now-div-header">Trending Now</h2>
+                    <div id="trending-div-body">
+                        <div class="trending-now-album">
+                            <img src="./images/play-now-trending-vector.png"  class="trending-now-album-vector">
+                            <div class="trending-now-album-info">
+                                <p class="trending-now-album-name">
+                                    Legends Never Die
+                                </p>
+                                <p class="trending-now-album-artist">
+                                    Juice WRLD
+                                </p>
+                            </div>
+                            <p class="trending-now-additional-info">
+                                22 Tracks
+                            </p>
+                        </div>
+                        <div class="trending-now-album">
+                            <img src="./images/play-now-trending-vector.png"  class="trending-now-album-vector">
+                            <div class="trending-now-album-info">
+                                <p class="trending-now-album-name">
+                                    Savage Mode II
+                                </p>
+                                <p class="trending-now-album-artist">
+                                    21 Savage & Metro Boomin
+                                </p>
+                            </div>
+                            <p class="trending-now-additional-info">
+                                15 Tracks
+                            </p>
+                        </div>
+                        <div class="trending-now-album">
+                            <img src="./images/play-now-trending-vector.png"  class="trending-now-album-vector">
+                            <div class="trending-now-album-info">
+                                <p class="trending-now-album-name">
+                                    My Turn
+                                </p>
+                                <p class="trending-now-album-artist">
+                                    Lil Baby
+                                </p>
+                            </div>
+                            <p class="trending-now-additional-info">
+                                20 Tracks
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 Your Fav Albums
             </section>
         </div>
