styled popular artists section

--- a/public/index.html
+++ b/public/index.html
@@ -179,7 +179,35 @@
                         </div>
                     </div>
                 </div>
-                Your Fav Albums
+                <div id="popular-artists-div">
+                    <h2 id="popular-artists-div-header">Popular Artists</h2>
+                    <div id="popular-artists-div-body">
+                        <div class="popular-artist">
+                            <img src="./images/artist pics/Chance_The_Rapper.jpg" class="popular-artist-img">
+                            <div class="popular-artist-info">
+                                <p class="popular-artist-name">Chance The Rapper</p>
+                                <p class="popular-artist-followers">12.3M  Followers</p>
+                            </div>
+                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
+                        </div>
+                        <div class="popular-artist">
+                            <img src="./images/artist pics/drake.jfif" class="popular-artist-img">
+                            <div class="popular-artist-info">
+                                <p class="popular-artist-name">Drake</p>
+                                <p class="popular-artist-followers">66.5M Followers</p>
+                            </div>
+                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
+                        </div>
+                        <div class="popular-artist">
+                            <img src="./images/artist pics/lil_durk.jpg" class="popular-artist-img">
+                            <div class="popular-artist-info">
+                                <p class="popular-artist-name">Lil Durk</p>
+                                <p class="popular-artist-followers">7.8M Followers</p>
+                            </div>
+                            <img src="./images/dots-horizontal-vector.png" alt="options" class="popular-artist-dots">
+                        </div>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
