--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+    <title>IndiJams | The Best Jams In Th South</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.0.0/firebase-app.js"></script>
